--- a/forest/forest.toml
+++ b/forest/forest.toml
@@ -1,5 +1,5 @@
 [forest]
 trees = ["trees" ]                   # The directories in which your trees are stored
 assets = ["assets"]                  # The directories in which your assets are stored
-theme = "theme"                      # The directory in which your theme is stored
-home = "boat-0001.tree"
+home = "boat-0001"
+url = "https://boatnotabot.com"
