docs: update README.md

--- a/forest/forest.toml
+++ b/forest/forest.toml
@@ -2,4 +2,4 @@
 trees = ["trees" ]                   # The directories in which your trees are stored
 assets = ["assets"]                  # The directories in which your assets are stored
 home = "boat-0001"
-url = "https://boatnotabot.com"
+url = "https://boatnotabot.com/"
